refactor: 벌크 인서트용 레포지토리를 TicketIssueRepositoryCustomImpl에서 주입받는 것으로 변경